<resources>
    <string name="app_name">Training Home</string>
    <string name="btn_scroll_view">Scroll View</string>
    <string name="btn_start_activity_for_result">Start Activity For Result and Menu
    </string>
    <string name="title_activity_scroll_view">ScrollView</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="title_activity_user_info_editor">UserInfoEditor</string>
    <string name="name">Name</string>
    <string name="hint_type_your_name">type your name</string>
    <string name="age">Age</string>
    <string name="hint_your_age">your age</string>
    <string name="is_single">Is Single</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="address">Address</string>
    <string name="hint_your_address">Your address</string>
    <string name="save">Save</string>
    <string name="long_text">
       Web:  https://developer.android.com/ \n
      Mobile:   0568474940 \n
      Email:   mohammad.kaiedd@gmail.com
\n\n
     <b>   Build your first app</b> \n
The following pages teach you how to build a simple Android app. You’ll learn how to create a "Hello World" project with Android Studio and run it. Then, you\'ll create a new interface for the app that takes some user input and opens a second screen in the app.

But before you start, there are two fundamental concepts you should understand about Android apps:

       

<i>Apps provide multiple entry points</i>
Android apps are built as a combination of components that can be invoked individually. For example, an activity is a type of app component that provides a user interface.

The "main" activity is what starts when the user taps your app icon, but you can take the user straight into a different activity from other places, such as from a notification or even from a different app.

Other components such as broadcast receivers and services also allow your app to perform background tasks without a user interface.

After you build your first app, learn more about the other components at App Fundamentals.

Apps adapt to different devices
Android allows you to provide different resources for different devices. For example, you can create different layouts for different screen sizes. Then the system determines which layout to use based on the current device\'s screen size.

If any of your app\'s features need specific hardware, such as a camera, you can query whether the device has that hardware at runtime and then disable the corresponding features if not. You can also set some features as required so Google Play won\'t allow installation on devices without them.

After you build your first app, learn more about device configurations at Device Compatibility.

    </string>
    <string name="finish">Finish</string>
    <string name="edit">Edit</string>
    <string name="your_info">Your info ...</string>
    <array name="universities_list">
        <item>Khadoori</item>
        <item>Alnajah</item>
        <item>Hebron</item>
        <item>PPU</item>
        <item>Open University</item>
    </array>


    <string name="choose_datetime">Choose the date and time:</string>
    <string name="date_button">Date</string>
    <string name="time_button">Time</string>
    <string name="date_picker">datePicker</string>
    <string name="time_picker">timePicker</string>
    <string name="date">"Date: "</string>
    <string name="time">"Time: "</string>
    <string name="toast">Toast</string>
    <string name="settings">Settings</string>
    <string name="share_text_with">Share text with ... </string>
    <string name="firsrt_item">Firsrt Item</string>
    <string name="title_activity_super">SuperActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed_action_bar">TabbedActivityActionBar</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_masterdetailsemployee_list">master_details_employes</string>
    <string name="title_masterdetailsemployee_detail">master_details_employee Detail</string>
    <string name="power_connected">Power connected!</string>
    <string name="power_disconnected">Power disconnected!</string>
    <string name="custom_broadcast_toast">Custom Broadcast Received</string>
    <string name="send_custom_broadcast">Send Custom Broadcast</string>
    <string name="receiver_on">Receiver On</string>
    <string name="receiver_off">Receiver Off</string>
    <string name="unknown_action">unknown intent action</string>
    <string name="url">https://www.android.com/static/2016/img/hero-carousel/banner-android-p-2.jpg</string>

    <string name="customized_notification_title_template">Customized: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="customized_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="notification_title">You\'ve been notified!</string>
    <string name="notification_text">This is your notification text.</string>
    <string name="update">Update Notification</string>
    <string name="notify_me">Notify Me!</string>
    <string name="update_me">Update Me!</string>
    <string name="cancel_me">Cancel Me!</string>
    <string name="notification_updated">Notification Updated!</string>
    <string name="notification_channel_name">Mascot Notification</string>
    <string name="notification_channel_description">Notification from Mascot</string>
    <string name="alarm_off">Alarm off</string>
    <string name="alarm_on">Alarm on</string>
    <string name="custom_notification_title_template">Custom: %1$s</string>
    <string name="alarm_on_toast">Stand Up Alarm On!</string>
    <string name="alarm_off_toast">Stand Up Alarm Off!</string>
    <string name="seconds">%1$d s</string>
    <string name="required_network_type">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not set</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="job_service">Job Service</string>
    <string name="job_running">Your Job ran to completion!</string>
    <string name="job_service_notification">Job Service notification</string>
    <string name="notification_channel_job">Notifications from Job Service</string>
    <string name="job_scheduled">Job Scheduled, will run when the constraints are met</string>
    <string name="no_constraint_toast">Please set at least one constraint</string>
    <string name="jobs_canceled">Jobs Canceled</string>
    <!-- TODO: remove this placeholder text -->
    <string name="custom_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>
    <string name="title_activity_job_service">JobServiceActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_nav_drawer">ActivityNavDrawer</string>
</resources>
